<resources>
    <string name="app_name">MATHEMATICAL QUIZ</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">luca.bigoni@live.it</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="Cancel">Cancel</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_SerieNumeriche">Numeric Series</string>
    <string name="menu_QuizLogici">Quiz Logici</string>
    <string name="menu_Random">Random</string>
    <string name="menu_contat_support">Contat Support</string>
    <string name="Support">Support</string>
</resources>
