<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />

        <item android:title="Exercise">
            <menu>
                <item
                    android:id="@+id/nav_numeric_series"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/menu_SerieNumeriche" />
                <item
                    android:id="@+id/nav_slideshow"
                    android:visible="false"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/menu_QuizLogici" />
                <item
                    android:id="@+id/nav_tools"
                    android:visible="false"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/menu_Random" />
            </menu>
        </item>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_contat_support"
                android:icon="@drawable/ic_menu_contat_support"
                android:title="@string/menu_contat_support" />
        </menu>
    </item>

</menu>
