<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="luca.bigoni.mathematicalquiz.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_numeric_series"
        android:name="luca.bigoni.mathematicalquiz.ui.NumericSeries.NumericSeriesFragment"
        android:label="@string/menu_SerieNumeriche"
        tools:layout="@layout/fragment_numeric_series" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="luca.bigoni.mathematicalquiz.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_QuizLogici"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="luca.bigoni.mathematicalquiz.ui.tools.ToolsFragment"
        android:label="@string/menu_Random"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="luca.bigoni.mathematicalquiz.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="luca.bigoni.mathematicalquiz.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/nav_contat_support"
        android:name="luca.bigoni.mathematicalquiz.ui.contatSupport.ContatSupportFragment"
        android:label="@string/Support"
        tools:layout="@layout/fragment_send" />
</navigation>